# OutOfPhase

./: BandModeButton.h  CMakeLists.txt  ComboBoxWithArrows.h  CustomSlider.h  DiscreteSlider.h  DistributionSwitch.h  FFT.h  FlipButton.h  FreezeCaptureButton.h  FrequencyKnob.h  FrostButton.h  LICENSE  OutOfPhase.cpp  OutOfPhase.h  PhasePlot.cpp  PhasePlot.h  PlugInGUISettings.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginSettings.h  ProjectPlan.md  README.md  RandomButton.h  Versioning.h.in  YourPluginName.cpp  YourPluginName.h  ZeroButton.h  readme.md
Python/: null_phase_blockwise.py  phase_frost.py  random_phase.py  random_phase_blockwise.py  random_phase_blockwise_smooth.py  spectrum_normVsThres.py  spectrum_thres.py
customComponents/: BandModeButton.h  CustomSlider.h  DiscreteSlider.h  DistributionSwitch.h  FlipButton.h  FrequencyKnob.h  FrostButton.h  PhasePlot.cpp  PhasePlot.h  RandomButton.h  ZeroButton.h
libs/: FFT.cpp
resources/images/: dice_bin.cpp  dice_bin.h  glass_texture2_bin.h  glass_texture_bin.h  paper_bin.cpp  paper_bin.h  snowflake_bin.cpp  snowflake_bin.h
tools/: AudioProcessParameter.h  MidiModPitchState.cpp  MidiModPitchState.h  PresetHandler.cpp  PresetHandler.h  SynchronBlockProcessor.cpp  SynchronBlockProcessor.h
